--- a/radio.html
+++ b/radio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="radio1.jpg">
-    <title>Онлайн радио</title>
+    <title>Християнське онлайн радіо</title>
 
     <style>
         /* Общие стили */
@@ -25,8 +25,8 @@
             margin: 0;
         }
         h3 {
-            font-size: 16px;
-            color: #FF5733;
+            font-size: 14px;
+            color: #00FF00;
             margin: 10px 0;
         }
         #radioPlayerContainer {
@@ -106,8 +106,8 @@
 <body>
 
 <header>
-    <h1>Христианское радио онлайн</h1>
-    <h3>Сбірка : (Дім Євангелія" м Суми., Украина)</h3>
+    <h1>Християнське онлайн радіо</h1>
+    <h3>Сбірка: (Дім Євангелія" м Суми., Украина)</h3>
 </header>
 
 <!-- Статическое изображение анимации радио (показывается по умолчанию) -->
