--- a/radio.html
+++ b/radio.html
@@ -128,6 +128,7 @@
     <li><a href="#" onclick="playRadio('https://icecast.pereraadio.ee:9000/Semeinoje', 'Семейное Радио Эли', event)">Семейное Радио Эли</a></li>
     <li><a href="#" onclick="playRadio('https://rt.radioslovo.net:4145/stream', '«Открытое Слово» Авто радио', event)">«Открытое Слово» Авто радио</a></li>
     <li><a href="#" onclick="playRadio('https://rt.radioslovo.net:4395/radio?1714579709762', '«Открытое Слово» христианское радио', event)">«Открытое Слово» христианское радио</a></li>
+    <li><a href="#" onclick="playRadio('https://rt.radioslovo.net:5005/radio?1714621827960', '«Открытое Слово» христианское радио укр.', event)">«Открытое Слово» христианское радио укр.</a></li>
     <!-- Добавьте другие радиостанции по аналогии -->
 </ul>
 
