--- a/radio.html
+++ b/radio.html
@@ -123,7 +123,7 @@
 
 <header>
     <h1>Християнське онлайн радіо</h1>
-    <h3>Сбірка: (Дім Євангелія" м Суми, Украина © 2024 р.)</h3>
+    <h3>Збірка: (Дім Євангелія" м Суми, Украина © 2024 р.)</h3>
 </header>
 
 <!-- Статическое изображение анимации радио (показывается по умолчанию) -->
