--- a/radio.html
+++ b/radio.html
@@ -31,7 +31,7 @@
         }
 
         a {
-            font-size: 10px;
+
             color: #FFFF00;
         }
         #currentRadio {
@@ -142,7 +142,7 @@
 <!-- Меню радиостанций -->
 <ul id="radioMenu">
     
-    <a>Круглосуточное вещание аудио Библии. Слушайте и ищите Господа вместе с нами!</a>    
+    <blockquote>Круглосуточное вещание аудио Библии. Слушайте и ищите Господа вместе с нами!</blockquote>    
  
     <li><a href="#" onclick="playRadio('https://rs.radioslovo.net:4055/stream', 'Чтение Нового Завета', event)">Чтение Нового Завета</a></li>
     <li><a href="#" onclick="playRadio('https://rs.radioslovo.net:4165/stream', 'Ветхий Завет', event)">Ветхий Завет</a></li>
