--- a/radio_player.html
+++ b/radio_player.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="radio2.jpg">
-    <title>Християнське онлайн радіо</title>
+    <title>Християнське онлайн радіо 2</title>
 
     <style>
         /* Общие стили */
