--- a/radio_player.html
+++ b/radio_player.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="radio2.jpg">
-    <title>Християнське онлайн радіо 2</title>
+    <title>Християнське онлайн радіо</title>
 
     <style>
         /* Общие стили */
@@ -30,9 +30,9 @@
             margin: 10px 0;
         }
 
-        a {
-
-            color: #FFFF00;
+        blockquote {
+            font-size: 14px;
+            color: #ccc;
         }
 
     </style>
@@ -48,7 +48,9 @@
 <iframe frameborder="no" src="https://radio.fonki.pro/plugins/embed/642/00bcd4/1/1" style="width:100%; height:100px;" scrolling="no"></iframe>
 
 <iframe frameborder="no" src="https://radio.fonki.pro/plugins/embed/762/ff9800/1/1" style="width:100%; height:100px;" scrolling="no"></iframe>
-  
+ 
+<a>_______________________________________</a> 
+ 
 <iframe frameborder="no" src="https://radio.fonki.pro/plugins/embed/2/9c27b0/1/1" style="width:100%; height:100px;" scrolling="no"></iframe>
 
 <iframe frameborder="no" src="https://radio.fonki.pro/plugins/embed/29/ffeb3b/1/1" style="width:100%; height:100px;" 
