--- a/radio_player.html
+++ b/radio_player.html
@@ -89,6 +89,8 @@ scrolling="no"></iframe>
     });
 </script>
 
-
+    <footer style="background-color: #222; padding: 20px; text-align: center; border-top: 1px solid #ccc; margin-top: 50px;">
+        <p>м. Суми, версія збірки 2 : © 2024 р.</p>
+    </footer>
 </body>
 </html>
