--- a/video_other.html
+++ b/video_other.html
@@ -129,7 +129,7 @@ nav ul li {
 <nav>
     <ul>
         <li><a href="index.html">Головна</a></li>
-        <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
+        <li><a href="video_max.html">Всі записи служінь</a></li>
         <li><a href="video_other.html">Другі відео</a></li>
         <li><a href="radio.html">Онлайн радіо</a></li>
     </ul>
