--- a/video_max.html
+++ b/video_max.html
@@ -126,14 +126,18 @@ nav ul li {
   
     <p>Збірник відео записів .</p>
     <p style="font-size: smaller; color: green;">[Cторінка : Записи служінь]</p>
-<nav>
-    <ul>
-        <li><a href="index.html">Головна</a></li>
-        <li><a href="video_max.html">Всі записи служінь</a></li>
-        <li><a href="video_other.html">Другі відео</a></li>
-        <li><a href="radio.html">Онлайн радіо</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="video_other.html">Другі відео :</a></li>
+            <ul>               
+               <li><a href="video_other.html#sluzhinnya-anchor">Збірки проповідей</a></li>
+	       <li><a href="video_other.html#musical">Музична християнська сбірка</a></li>
+            </ul>
+            <li><a href="radio.html">Онлайн християнське радіо 1</a></li>
+            <li><a href="radio_player.html">Онлайн християнське радіо 2</a></li>
+        </ul>
+    </nav>
 
 
    <!-- Индикатор загрузки -->
