--- a/video_max.html
+++ b/video_max.html
@@ -129,7 +129,7 @@ nav ul li {
     <nav>
         <ul>
             <li><a href="index.html">Головна</a></li>
-            <li><a href="video_other.html">Другі відео :</a></li>
+            <li><a>Другі відео :</a></li>
             <ul>               
                <li><a href="video_other.html#sluzhinnya-anchor">Збірки проповідей</a></li>
 	       <li><a href="video_other.html#musical">Музична християнська сбірка</a></li>
