--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ nav ul li a {
 
             // Разбираем плейлист и находим видео с датами
             playlistLines.forEach(line => {
-                const parts = line.split(':');
+                const parts = line.split('§');
                 if (parts.length >= 5) {
                     const videoId = parts[2];
                     const dateString = parts[4];
