--- a/video_max.html
+++ b/video_max.html
@@ -306,7 +306,7 @@ function renderVideoLists(videos) {
     const unknownVideos = [];
 
     videos.forEach(video => {
-        const [videoIndex, group, videoId, videoTitle] = video.split(':');
+        const [videoIndex, group, videoId, videoTitle] = video.split('§');
         if (!videoGroups[group]) {
             videoGroups[group] = [];
         }
