--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ nav ul li {
 nav ul li a {
     text-decoration: none; /* Убираем подчеркивание у ссылок */
     color: #333; /* Цвет текста ссылок */
-    width: 240px; /* Фиксированная ширина элементов меню */
+    width: 250px; /* Фиксированная ширина элементов меню */
     display: block; /* Делаем элементы меню блочными, чтобы задать ширину */
     padding: 4px 10px; /* Внутренний отступ у ссылок */
     background-color: #fff; /* Цвет фона ссылок */
     border-radius: 8px; /* Закругляем углы ссылок */
     transition: background-color 0.3s ease; /* Плавное изменение цвета фона при наведении */
-    font-size: 16px; /* Увеличиваем размер шрифта главного меню */
+    font-size: 18px; /* Увеличиваем размер шрифта главного меню */
 }
 
 
@@ -81,8 +81,8 @@ nav ul li a {
                <li><a href="video_other.html#sluzhinnya-anchor">Збірки проповідей</a></li>
 	       <li><a href="video_other.html#musical">Музична християнська сбірка</a></li>
             </ul>
-            <li><a href="radio.html">Онлайн християнське радіо 1</a></li>
-            <li><a href="radio_player.html">Онлайн християнське радіо 2</a></li>
+            <li><a href="radio.html">Християнське радіо 1</a></li>
+            <li><a href="radio_player.html">Християнське радіо 2</a></li>
         </ul>
     </nav>
     <div id="playlistInfo"></div>
