--- a/video_max.html
+++ b/video_max.html
@@ -13,19 +13,19 @@
             background-color: #f7f7f7;
         }
 
-/* Стили для контейнеров */
-.content-section {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 30px;
-    padding: 20px;
-    background-image: url('images/icon15.jpg'); /* Путь к вашему фоновому изображению */
-    background-size: cover; /* Масштабирование изображения */
-    background-repeat: no-repeat; /* Запрет повторения фонового изображения */
-    background-position: center; /* Центрирование фонового изображения */
-}
+        /* Стили для контейнеров */
+        .content-section {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+            padding: 20px;
+            background-image: url('images/icon15.jpg'); /* Путь к вашему фоновому изображению */
+            background-size: cover; /* Масштабирование изображения */
+            background-repeat: no-repeat; /* Запрет повторения фонового изображения */
+            background-position: center; /* Центрирование фонового изображения */
+        }
 
         .content-section h2 {
             color: #333;
@@ -60,16 +60,16 @@
         }
 
         /* Стили для основного логотипа */
-.content-section .video-avatar {
-    width: 100px;  /* Установите желаемую ширину */
-    height: auto;  /* Автоматическое масштабирование высоты */
-}
+        .content-section .video-avatar {
+            width: 100px;  /* Установите желаемую ширину */
+            height: auto;  /* Автоматическое масштабирование высоты */
+        }
 
-/* Стили для иконки YouTube */
-.video-link img {
-    width: 50px;   /* Установите желаемую ширину */
-    height: auto;  /* Автоматическое масштабирование высоты */
-}
+        /* Стили для иконки YouTube */
+        .video-link img {
+            width: 50px;   /* Установите желаемую ширину */
+            height: auto;  /* Автоматическое масштабирование высоты */
+        }
 
         .video-player {
             display: none;
@@ -77,9 +77,32 @@
             overflow: hidden;
          }
 
-nav ul li {
-    margin-bottom: 8px; /* Увеличиваем расстояние между элементами меню по вертикали на 10 пикселей */
-}      
+
+        .submenu {
+            display: none;
+        }
+
+        input[type="checkbox"] {
+            display: none;
+        }
+
+        label[for="services-toggle"],
+        label[for="preachers-toggle"] {
+            position: relative;
+        }
+
+        label[for="services-toggle"]:after,
+        label[for="preachers-toggle"]:after {
+            content: "▼";
+            position: absolute;
+            right: -20px; /* Сдвигаем на 5px вправо */
+        }
+
+        input[type="checkbox"]:checked + .submenu {
+            display: block;
+        }
+
+
         @media (max-width: 768px) {
             .video-player {
                 position: relative;
@@ -107,6 +130,27 @@ nav ul li {
 
         }
 
+    
+nav ul li {
+    margin-bottom: 1px; /* Збільшуємо відстань між елементами меню по вертикалі на 10 пікселів */
+}
+
+nav ul li a {
+    text-decoration: none; /* Відміняємо підкреслення у посилань */
+    color: #555; /* Колір тексту посилань */
+    width: 200px; /* Фіксована ширина елементів меню */
+    display: block; /* Робимо елементи меню блочними, щоб задати ширину */
+    padding: 4px 10px; /* Внутрішній відступ у посилань */
+    background-color: #f5f5f5; /* Колір фону посилань */
+    border-radius: 5px; /* Закруглюємо кути посилань */
+    transition: background-color 0.3s ease; /* Плавна зміна кольору фону при наведенні */
+    font-size: 16px; /* Зменшуємо розмір шрифту меню */
+}
+
+nav ul li a:hover {
+    background-color: #ddd; /* Колір фону посилань при наведенні */
+}
+
         @media (min-width: 769px) {
             .video-player {
                 width: 560px;
@@ -126,19 +170,38 @@ nav ul li {
   
     <p>Збірник відео записів .</p>
     <p style="font-size: smaller; color: green;">[Cторінка : Записи служінь]</p>
-    <nav>
-        <ul>
-            <li><a href="index.html">Головна</a></li>
-            <li><a href="video_other.html">Другі відео :</a></li>
-            <ul>               
-               <li><a href="video_other.html#sluzhinnya-anchor">Збірки проповідей</a></li>
-	       <li><a href="video_other.html#musical">Музична християнська сбірка</a></li>
-            </ul>
-            <li><a href="radio.html">Онлайн християнське радіо1</a></li>
-            <li><a href="radio_player.html">Онлайн християнське радіо2</a></li>
-        </ul>
-    </nav>
 
+<nav>
+    <ul>
+        <li><a href="index.html">Головна</a></li>
+        <li><a href="video_other.html">Другі відео</a></li>
+        <li>
+            <a>Всі записи служінь :</a>
+            <ul>               
+                <li><a href="#service">Служіння</a></li>
+                <li><a href="#praise_the_lord">Прославлення Господа</a></li>
+                <li><a>Проповідники :</a>
+                    <ul>
+                        <li><a href="#marioha">Марйоха</a></li>
+                        <li><a href="#mischenko">Міщенко</a></li>
+                        <li><a href="#buligin">Булигін</a></li>
+                        <li><a href="#zinchenko">Зінченко</a></li>
+                        <li><a href="#laba">Лаба</a></li>
+                        <li><a href="#parfylo">Парфило</a></li>
+                        <li><a href="#komisar">Комісар</a></li>
+                        <li><a href="#ivanchenko">Іванченко</a></li>
+                    </ul>
+                </li>
+                <li><a href="#youth_praise">Прославлення, Молодіжна</a></li>
+                <li><a href="#choir_singing">Хоровий спів</a></li>
+                <li><a href="#water_baptism">Водне хрещення</a></li>
+                <li><a href="#other_videos">Інші відео</a></li>
+            </ul>
+        </li>
+        <li><a href="radio.html">Християнське радіо 1</a></li>
+        <li><a href="radio_player.html">Християнське радіо 2</a></li>
+    </ul>
+</nav>
 
    <!-- Индикатор загрузки -->
     <div id="loader" style="display: none; text-align: center; margin-top:20px;">
@@ -149,129 +212,114 @@ nav ul li {
    <p style="font-size: smaller; color: red; text-align: center;">Повна збірка. Всього відео: <span id="totalVideoCount" style="font-size: smaller; color: red;">0</span></p>
 
 
-
-<div class="content-section">
+<div class="content-section" id="service">
     <h2>
         <img src="images/sq-5.jpg" alt="Аватар " class="video-avatar">
-        Служіння
+        <a>Служіння</a>
     </h2>
     <ul class="video-links" data-group="Служіння"></ul>
 </div>
 
-
-<div class="content-section">
+<div class="content-section" id="praise_the_lord">
     <h2>
         <img src="images/logo.jpg" alt="Аватар " class="video-avatar">
-        Прославлення Господа
+        <a>Прославлення Господа</a>
     </h2>
     <ul class="video-links" data-group="Прославлення"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="marioha">
     <h2>
         <img src="images/video1-icon.jpg" alt="Аватар " class="video-avatar">
-        Марйоха Микола Павлович
-
+        <a>Марйоха Микола Павлович</a>
     </h2>
     <ul class="video-links" data-group="Марйоха"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="mischenko">
     <h2>
         <img src="images/video2-icon.jpg" alt="Аватар " class="video-avatar">
-        Міщенко Андрій
-
+        <a>Міщенко Андрій</a>
     </h2>
     <ul class="video-links" data-group="Міщенко"></ul>
 </div>
 
-
-<div class="content-section">
+<div class="content-section" id="buligin">
     <h2>
         <img src="images/video3-icon.jpg" alt="Аватар " class="video-avatar">
-        Булигін Андрій Петрович
-
+        <a>Булигін Андрій Петрович</a>
     </h2>
     <ul class="video-links" data-group="Булигін"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="zinchenko">
     <h2>
         <img src="images/video7-icon.jpg" alt="Аватар " class="video-avatar">
-        Зінченко
-
+        <a>Зінченко</a>
     </h2>
     <ul class="video-links" data-group="Зінченко"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="laba">
     <h2>
         <img src="images/video6-icon.jpg" alt="Аватар " class="video-avatar">
-        Лаба
-
+        <a>Лаба</a>
     </h2>
     <ul class="video-links" data-group="Лаба"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="parfylo">
     <h2>
         <img src="images/video4-icon.jpg" alt="Аватар " class="video-avatar">
-       Парфіло 
-
+        <a>Парфіло</a>
     </h2>
     <ul class="video-links" data-group="Парфило"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="komisar">
     <h2>
         <img src="images/video8-icon.jpg" alt="Аватар " class="video-avatar">
-       Комісар
-
+        <a>Комісар</a>
     </h2>
     <ul class="video-links" data-group="Комісар"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="ivanchenko">
     <h2>
         <img src="images/video5-icon.jpg" alt="Аватар " class="video-avatar">
-       Иванченко
-
+        <a>Іванченко</a>
     </h2>
     <ul class="video-links" data-group="Іванченко"></ul>
 </div>
 
-
-
-
-
-<div class="content-section">
+<div class="content-section" id="youth_praise">
     <h2>
         <img src="images/team-image4.jpg" alt="Аватар " class="video-avatar">
-        Прославлення, Молодіжна
+        <a>Прославлення, Молодіжна</a>
     </h2>
     <ul class="video-links" data-group="Молодіжне служіння|Дитяче служіння|Охріменко|Олена Приходько"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="choir_singing">
     <h2>
         <img src="images/project-image4.jpg" alt="Аватар " class="video-avatar">
-        Хоровий спів
+        <a>Хоровий спів</a>
     </h2>
     <ul class="video-links" data-group="Хоровий спів"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="water_baptism">
     <h2>
         <img src="images/project-image5.jpg" alt="Аватар " class="video-avatar">
-        Водне хрещення
+        <a>Водне хрещення</a>
     </h2>
     <ul class="video-links" data-group="Водне хрещення"></ul>
 </div>
 
-<div class="content-section">
+<div class="content-section" id="other_videos">
     <h2>
         <img src="images/logo.jpg" alt="Аватар " class="video-avatar">
-        Інші відео
+        <a>Інші відео</a>
     </h2>
     <ul class="video-links" data-group="остальное|Unknown"></ul>
 </div>
@@ -417,5 +465,8 @@ function renderVideoLists(videos) {
 
 
     </script>
+
+
 </body>
 </html>
+
