--- a/video_max.html
+++ b/video_max.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Список видео с YouTube</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="sq-5.jpg">
 
     <style>
 
@@ -144,7 +145,7 @@ nav ul li a {
     background-color: #f5f5f5; /* Колір фону посилань */
     border-radius: 5px; /* Закруглюємо кути посилань */
     transition: background-color 0.3s ease; /* Плавна зміна кольору фону при наведенні */
-    font-size: 20px; /* Зменшуємо розмір шрифту меню */
+    font-size: 16px; /* Зменшуємо розмір шрифту меню */
 }
 
 nav ul li a:hover {
