--- a/video_max.html
+++ b/video_max.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="sq-5.jpg">
+    <link rel="icon" href="images/sq-5.jpg">
     <title>Список видео с YouTube</title>
 
     <style>
