--- a/video_max.html
+++ b/video_max.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/sq-5.jpg">
-    <title>Список видео с YouTube</title>
+    <title>Список видео с YouTube maxi</title>
 
     <style>
 
