--- a/video_max.html
+++ b/video_max.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
+    <title>Список відео с YouTube maxi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="blo.jpg">
-    <title>Список видео с YouTube maxi</title>
+   
 
     <style>
 
