--- a/video_max.html
+++ b/video_max.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
     <title>Список відео с YouTube maxi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="blo.jpg">
+    <link rel="icon" href="https://ruyriy.github.io/VideoYouTube/blo.jpg">
    
 
     <style>
