--- a/video_max.html
+++ b/video_max.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-    <title>Список відео с YouTube maxi</title>
+    <meta charset="UTF-8">
+    <title>Список відео с YouTube</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://ruyriy.github.io/VideoYouTube/blo.jpg">
+    <link rel="icon" href="istockphoto-1331574354.jpg">
     <style>
 
         body {
