--- a/video_max.html
+++ b/video_max.html
@@ -163,6 +163,165 @@ nav ul li a:hover {
 
         }
     </style>
+</head>
+<body>    
+     <h2>Церква "Дім Євангелія</h2>
+  
+    <p>Збірник відео записів .</p>
+    <p style="font-size: smaller; color: green;">[Cторінка : Записи служінь]</p>
+
+<nav>
+    <ul>
+        <li><a href="index.html">Головна</a></li>
+        <li><a href="video_other.html">Другі відео</a></li>
+        <li>
+            <a>Всі записи служінь :</a>
+            <ul>               
+                <li><a href="#service">Служіння</a></li>
+                <li><a href="#praise_the_lord">Прославлення Господа</a></li>
+                <li><a>Проповідники :</a>
+                    <ul>
+                        <li><a href="#marioha">Марйоха</a></li>
+                        <li><a href="#mischenko">Міщенко</a></li>
+                        <li><a href="#buligin">Булигін</a></li>
+                        <li><a href="#zinchenko">Зінченко</a></li>
+                        <li><a href="#laba">Лаба</a></li>
+                        <li><a href="#parfylo">Парфило</a></li>
+                        <li><a href="#komisar">Комісар</a></li>
+                        <li><a href="#ivanchenko">Іванченко</a></li>
+                    </ul>
+                </li>
+                <li><a href="#youth_praise">Прославлення, Молодіжна</a></li>
+                <li><a href="#choir_singing">Хоровий спів</a></li>
+                <li><a href="#water_baptism">Водне хрещення</a></li>
+                <li><a href="#other_videos">Інші відео</a></li>
+            </ul>
+        </li>
+        <li><a href="radio.html">Християнське радіо 1</a></li>
+        <li><a href="radio_player.html">Християнське радіо 2</a></li>
+    </ul>
+</nav>
+
+   <!-- Индикатор загрузки -->
+    <div id="loader" style="display: none; text-align: center; margin-top:20px;">
+        <img src="images/Spinner-3.gif" alt="Loading..." width="50">
+        <p>Завантаження відео...</p>
+    </div>
+
+   <p style="font-size: smaller; color: red; text-align: center;">Повна збірка. Всього відео: <span id="totalVideoCount" style="font-size: smaller; color: red;">0</span></p>
+
+
+<div class="content-section" id="service">
+    <h2>
+        <img src="images/sq-5.jpg" alt="Аватар " class="video-avatar">
+        <a>Служіння</a>
+    </h2>
+    <ul class="video-links" data-group="Служіння"></ul>
+</div>
+
+<div class="content-section" id="praise_the_lord">
+    <h2>
+        <img src="images/logo.jpg" alt="Аватар " class="video-avatar">
+        <a>Прославлення Господа</a>
+    </h2>
+    <ul class="video-links" data-group="Прославлення"></ul>
+</div>
+
+<div class="content-section" id="marioha">
+    <h2>
+        <img src="images/video1-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Марйоха Микола Павлович</a>
+    </h2>
+    <ul class="video-links" data-group="Марйоха"></ul>
+</div>
+
+<div class="content-section" id="mischenko">
+    <h2>
+        <img src="images/video2-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Міщенко Андрій</a>
+    </h2>
+    <ul class="video-links" data-group="Міщенко"></ul>
+</div>
+
+<div class="content-section" id="buligin">
+    <h2>
+        <img src="images/video3-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Булигін Андрій Петрович</a>
+    </h2>
+    <ul class="video-links" data-group="Булигін"></ul>
+</div>
+
+<div class="content-section" id="zinchenko">
+    <h2>
+        <img src="images/video7-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Зінченко</a>
+    </h2>
+    <ul class="video-links" data-group="Зінченко"></ul>
+</div>
+
+<div class="content-section" id="laba">
+    <h2>
+        <img src="images/video6-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Лаба</a>
+    </h2>
+    <ul class="video-links" data-group="Лаба"></ul>
+</div>
+
+<div class="content-section" id="parfylo">
+    <h2>
+        <img src="images/video4-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Парфіло</a>
+    </h2>
+    <ul class="video-links" data-group="Парфило"></ul>
+</div>
+
+<div class="content-section" id="komisar">
+    <h2>
+        <img src="images/video8-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Комісар</a>
+    </h2>
+    <ul class="video-links" data-group="Комісар"></ul>
+</div>
+
+<div class="content-section" id="ivanchenko">
+    <h2>
+        <img src="images/video5-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Іванченко</a>
+    </h2>
+    <ul class="video-links" data-group="Іванченко"></ul>
+</div>
+
+<div class="content-section" id="youth_praise">
+    <h2>
+        <img src="images/team-image4.jpg" alt="Аватар " class="video-avatar">
+        <a>Прославлення, Молодіжна</a>
+    </h2>
+    <ul class="video-links" data-group="Молодіжне служіння|Дитяче служіння|Охріменко|Олена Приходько"></ul>
+</div>
+
+<div class="content-section" id="choir_singing">
+    <h2>
+        <img src="images/project-image4.jpg" alt="Аватар " class="video-avatar">
+        <a>Хоровий спів</a>
+    </h2>
+    <ul class="video-links" data-group="Хоровий спів"></ul>
+</div>
+
+<div class="content-section" id="water_baptism">
+    <h2>
+        <img src="images/project-image5.jpg" alt="Аватар " class="video-avatar">
+        <a>Водне хрещення</a>
+    </h2>
+    <ul class="video-links" data-group="Водне хрещення"></ul>
+</div>
+
+<div class="content-section" id="other_videos">
+    <h2>
+        <img src="images/logo.jpg" alt="Аватар " class="video-avatar">
+        <a>Інші відео</a>
+    </h2>
+    <ul class="video-links" data-group="остальное|Unknown"></ul>
+</div>
 
 
 
