--- a/video_max.html
+++ b/video_max.html
@@ -5,7 +5,9 @@
     <title>Список видео с YouTube</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="istockphoto-626708040-612x612.jpg">
-   <style>
+
+    <style>
+
         body {
             font-family: Arial, sans-serif;
             padding: 10px;
@@ -202,11 +204,269 @@ nav ul li a:hover {
     </ul>
 </nav>
 
+   <!-- Индикатор загрузки -->
+    <div id="loader" style="display: none; text-align: center; margin-top:20px;">
+        <img src="images/Spinner-3.gif" alt="Loading..." width="50">
+        <p>Завантаження відео...</p>
+    </div>
 
-    
+   <p style="font-size: smaller; color: red; text-align: center;">Повна збірка. Всього відео: <span id="totalVideoCount" style="font-size: smaller; color: red;">0</span></p>
+
+
+<div class="content-section" id="service">
+    <h2>
+        <img src="images/sq-5.jpg" alt="Аватар " class="video-avatar">
+        <a>Служіння</a>
+    </h2>
+    <ul class="video-links" data-group="Служіння"></ul>
+</div>
+
+<div class="content-section" id="praise_the_lord">
+    <h2>
+        <img src="images/logo.jpg" alt="Аватар " class="video-avatar">
+        <a>Прославлення Господа</a>
+    </h2>
+    <ul class="video-links" data-group="Прославлення"></ul>
+</div>
+
+<div class="content-section" id="marioha">
+    <h2>
+        <img src="images/video1-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Марйоха Микола Павлович</a>
+    </h2>
+    <ul class="video-links" data-group="Марйоха"></ul>
+</div>
+
+<div class="content-section" id="mischenko">
+    <h2>
+        <img src="images/video2-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Міщенко Андрій</a>
+    </h2>
+    <ul class="video-links" data-group="Міщенко"></ul>
+</div>
+
+<div class="content-section" id="buligin">
+    <h2>
+        <img src="images/video3-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Булигін Андрій Петрович</a>
+    </h2>
+    <ul class="video-links" data-group="Булигін"></ul>
+</div>
+
+<div class="content-section" id="zinchenko">
+    <h2>
+        <img src="images/video7-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Зінченко</a>
+    </h2>
+    <ul class="video-links" data-group="Зінченко"></ul>
+</div>
+
+<div class="content-section" id="laba">
+    <h2>
+        <img src="images/video6-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Лаба</a>
+    </h2>
+    <ul class="video-links" data-group="Лаба"></ul>
+</div>
+
+<div class="content-section" id="parfylo">
+    <h2>
+        <img src="images/video4-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Парфіло</a>
+    </h2>
+    <ul class="video-links" data-group="Парфило"></ul>
+</div>
+
+<div class="content-section" id="komisar">
+    <h2>
+        <img src="images/video8-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Комісар</a>
+    </h2>
+    <ul class="video-links" data-group="Комісар"></ul>
+</div>
+
+<div class="content-section" id="ivanchenko">
+    <h2>
+        <img src="images/video5-icon.jpg" alt="Аватар " class="video-avatar">
+        <a>Іванченко</a>
+    </h2>
+    <ul class="video-links" data-group="Іванченко"></ul>
+</div>
+
+<div class="content-section" id="youth_praise">
+    <h2>
+        <img src="images/team-image4.jpg" alt="Аватар " class="video-avatar">
+        <a>Прославлення, Молодіжна</a>
+    </h2>
+    <ul class="video-links" data-group="Молодіжне служіння|Дитяче служіння|Охріменко|Олена Приходько"></ul>
+</div>
+
+<div class="content-section" id="choir_singing">
+    <h2>
+        <img src="images/project-image4.jpg" alt="Аватар " class="video-avatar">
+        <a>Хоровий спів</a>
+    </h2>
+    <ul class="video-links" data-group="Хоровий спів"></ul>
+</div>
+
+<div class="content-section" id="water_baptism">
+    <h2>
+        <img src="images/project-image5.jpg" alt="Аватар " class="video-avatar">
+        <a>Водне хрещення</a>
+    </h2>
+    <ul class="video-links" data-group="Водне хрещення"></ul>
+</div>
+
+<div class="content-section" id="other_videos">
+    <h2>
+        <img src="images/logo.jpg" alt="Аватар " class="video-avatar">
+        <a>Інші відео</a>
+    </h2>
+    <ul class="video-links" data-group="остальное|Unknown"></ul>
+</div>
+
+
+        
 <footer style="background-color: #f4f4f4; padding: 20px; text-align: center; border-top: 1px solid #ccc; margin-top: 50px;">
     <p>м. Суми, версія збірки: © 2024 р.</p>
 </footer>
+
+
+   <script>
+
+  document.addEventListener("DOMContentLoaded", function() {
+    const loader = document.getElementById('loader');
+    const videoLinksContainers = document.querySelectorAll('.video-links');
+    const videoPlayers = document.querySelectorAll('.video-player');
+
+    // Загрузка списка видео из файла
+    loader.style.display = 'block';  // Показать индикатор загрузки
+    fetch('https://raw.githubusercontent.com/ruyriy/VideoYouTube/main/videos.txt')
+        .then(response => response.text())
+        .then(data => {
+            loader.style.display = 'none';  // Скрыть индикатор загрузки
+            const videos = data.split('\n').filter(Boolean);
+            renderVideoLists(videos);
+        });
+
+
+function renderVideoLists(videos) {
+    const videoGroups = {};
+    const unknownVideos = [];
+
+    videos.forEach(video => {
+        const [videoIndex, group, videoId, videoTitle] = video.split('§');
+        if (!videoGroups[group]) {
+            videoGroups[group] = [];
+        }
+        videoGroups[group].push({ videoIndex, videoId, videoTitle });
+    });
+
+    // Обновляем глобальный счетчик
+    const totalVideoCount = videos.length;
+    document.getElementById('totalVideoCount').textContent = totalVideoCount;
+
+    videoLinksContainers.forEach(container => {
+        const groupNames = container.getAttribute('data-group').split('|'); // Разделение групп по прямой черте
+        const videosForGroup = groupNames.flatMap(group => videoGroups[group] || []);
+
+        renderVideoList(videosForGroup, container);
+
+        // Удаление известных групп из общего списка видео
+        groupNames.forEach(group => {
+            delete videoGroups[group];
+        });
+    });
+
+    // Сбор всех оставшихся групп
+    Object.values(videoGroups).forEach(groupVideos => {
+        unknownVideos.push(...groupVideos);
+    });
+
+    // Поиск и обработка контейнера для неизвестных групп
+    const unknownGroupContainer = document.querySelector('.video-links[data-group="unknown"]');
+    renderVideoList(unknownVideos, unknownGroupContainer);
+}
+
+
+
+
+    function renderVideoList(videos, container) {
+        videos.forEach(({ videoIndex, videoId, videoTitle }) => {
+            const videoItem = createVideoItem(videoIndex, videoId, videoTitle);
+            container.appendChild(videoItem);
+        });
+
+        updateVideoListeners(container);
+    }
+
+    function createVideoItem(videoIndex, videoId, videoTitle) {
+        const videoItem = document.createElement('li');
+        videoItem.className = 'video-item';
+        videoItem.setAttribute('data-video-id', videoId);
+
+        const videoLink = document.createElement('a');
+        videoLink.className = 'video-link';
+        videoLink.href = '#';
+
+        const videoImage = document.createElement('img');
+        videoImage.src = 'images/youtube_icon.png';
+        videoImage.alt = 'YouTube Icon';
+
+        const videoIndexSpan = document.createElement('span');
+        videoIndexSpan.className = 'video-index';
+        videoIndexSpan.textContent = `[${videoIndex}]Видео `;
+
+        const videoTitleSpan = document.createElement('span');
+        videoTitleSpan.className = 'video-title';
+        videoTitleSpan.textContent = videoTitle;
+
+        videoLink.appendChild(videoImage);
+        videoLink.appendChild(videoIndexSpan);
+        videoLink.appendChild(videoTitleSpan);
+
+        const videoPlayerDiv = document.createElement('div');
+        videoPlayerDiv.className = 'video-player';
+
+        videoItem.appendChild(videoLink);
+        videoItem.appendChild(videoPlayerDiv);
+
+        return videoItem;
+    }
+
+    function updateVideoListeners(container) {
+        const videoLinks = container.querySelectorAll('.video-link');
+        const videoPlayers = container.querySelectorAll('.video-player');
+
+        videoLinks.forEach((link, index) => {
+            link.addEventListener('click', function(event) {
+                event.preventDefault();
+                const parentItem = this.parentElement;
+                const videoId = parentItem.getAttribute('data-video-id');
+
+                videoPlayers.forEach(player => {
+                    player.style.display = 'none';
+                    player.innerHTML = '';
+                });
+
+                const playerDiv = parentItem.querySelector('.video-player');
+                const iframe = document.createElement('iframe');
+                iframe.setAttribute('width', '560');
+                iframe.setAttribute('height', '315');
+                iframe.setAttribute('src', `https://www.youtube.com/embed/${videoId}`);
+                iframe.setAttribute('frameborder', '0');
+                iframe.setAttribute('allowfullscreen', 'true');
+
+                playerDiv.appendChild(iframe);
+                playerDiv.style.display = 'block';
+            });
+        });
+    }
+});
+
+
+    </script>
+
 
 </body>
 </html>
